refactor(env): change value

--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=
 DB_NAME=inventory
-JWT_SECRET=LM5ypMsknWWcX7lpwLgQAIseEOkzbKyw
+JWT_SECRET=1234567890
+PORT=3000
